changed file names to compass

--- a/compass.html
+++ b/compass.html
@@ -85,8 +85,8 @@
     />
 
     <!-- Project code -->
-    <link rel="stylesheet" href="TourismBook.css" />
-    <script src="TourismBook.js"></script>
+    <link rel="stylesheet" href="compass.css" />
+    <script src="compass.js"></script>
     <!-- fontawesome -->
     <link
       rel="stylesheet"
