--- a/compass.html
+++ b/compass.html
@@ -356,16 +356,19 @@
      
       <paper-header-panel main="">
          
-           <nav class="navbar navbar-inverse bg-dark" style="border: 0;">
+           <nav class="navbar navbar-inverse bg-dark" style="border: 0; height: 15vh;">
                 <!-- Brand and toggle get grouped for better mobile display -->
-                <div class="navbar-header">
+                <div class="navbar-header l1">
                     <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a href="#" class="navbar-brand">Brand</a>
+                    <a href="#" class="navbar-brand logo1"></a>
+                </div>
+                <div class="navbar-header l2" style="float: right;">
+                  <a href="#" class="navbar-brand logo2"></a>
                 </div>
                 <!-- Collection of nav links, forms, and other content for toggling -->
                 <div id="navbarCollapse" class="collapse navbar-collapse">
