--- a/compass.html
+++ b/compass.html
@@ -356,19 +356,27 @@
      
       <paper-header-panel main="">
          
-           <nav class="navbar navbar-inverse bg-dark" style="border: 0; height: 15vh;">
-                <!-- Brand and toggle get grouped for better mobile display -->
-                <div class="navbar-header l1">
+           <nav class="navbar navbar-inverse bg-dark" style="border: 0;">
+            <a href="#" class="navbar-brand l1"></a>    
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header" style="display: inline-block; width: 25%;">
+              <a class="navbar-brand" href="#" style="padding: 0;">
+                <img alt="Brand" src="1a.PNG" style="height: 100%; width: 100%;">
+              </a>
+              </div>
+              <div class="navbar-header logo2" style="display: inline-block; width: 12%;">
+
+              <a class="navbar-brand" href="#" style="padding: 0;">
+                <img alt="Brand1" src="1b.PNG" style="height: 100%; width: 100%;">
+              </a>
+            </div>
+                <div class="navbar-header" style="float: right;">
                     <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a href="#" class="navbar-brand logo1"></a>
-                </div>
-                <div class="navbar-header l2" style="float: right;">
-                  <a href="#" class="navbar-brand logo2"></a>
                 </div>
                 <!-- Collection of nav links, forms, and other content for toggling -->
                 <div id="navbarCollapse" class="collapse navbar-collapse">
