--- a/compass.html
+++ b/compass.html
@@ -904,7 +904,7 @@
                             <div
                               class="with-title qvobject"
                               id="QV-1-8a"
-                              style="overflow-y: hidden;"
+                              style="overflow: scroll;"
                             ></div>
                           </div>
                           <div id="vf2" class="col-xs-12 col-sm-8"
@@ -916,6 +916,7 @@
                             <div
                               class="with-title qvobject"
                               id="QV-1-8b"
+                              style="overflow: scroll;"
                             ></div>
                           </div>
                         </div>
@@ -932,13 +933,14 @@
                             <div
                               class="with-title qvobject"
                               id="QV-1-8d"
-                             
+                              style="overflow: scroll;"
                             ></div>
                           </div>
                           <div id="vf4" class="col-xs-12 col-sm-8" style="height: 217px;">
                             <div
                               class="with-title qvobject"
                               id="QV-1-8e"
+                              style="overflow: scroll;"
                             ></div>
                           </div>
                         </div>
