--- a/compass.html
+++ b/compass.html
@@ -3201,7 +3201,7 @@
                                 <div
                                   id="QV-39"
                                   class="qvobject"
-                                  style="height: 100%; margin-top: -38px"
+                                  style="height: 100%; margin-top: -38px; overflow: scroll;"
                                 ></div>
                               </div>
                               <div
@@ -3211,7 +3211,7 @@
                                 <div
                                   id="QV-40"
                                   class="qvobject"
-                                  style="height: 100%; margin-top: -38px"
+                                  style="height: 100%; margin-top: -38px; overflow: scroll;"
                                 ></div>
                               </div>
                             </div>
