--- a/compass.html
+++ b/compass.html
@@ -301,7 +301,7 @@
               <div class="navbar-header logo2" style="display: inline-block; width: 12%;">
 
               <a class="navbar-brand" href="#" style="padding: 0;">
-                <img alt="Brand1" src="1b.PNG" style="height: 100%; width: 100%;">
+                <img alt="Brand1" src="1b.svg" style="height: 100%; width: 100%;">
               </a>
             </div>
                 <div class="navbar-header" style="float: right;">
