added filters and clear selection

--- a/compass.html
+++ b/compass.html
@@ -413,20 +413,20 @@
                 </div>
               </div>
             </div>
+            <div class="col-xs-12 col-md-2 col-lg-1 filter-container" style="position: absolute; right: 0;">
+              <div class="row">
+                <div class="col-xs-12 filter">
+                  <div id="QV-clear-1" class="qvobject" style="height: 35px"></div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-xs-12 filter">
+                  <div id="QV-refresh-1" class="qvobject" style="height: 35px;width: 110%;"></div>
+                </div>
+              </div>
+            </div>
           </div>
-          <div
-            style="
-              float: right;
-              text-align: end;
-              color: white;
-              margin-top: -30px;
-              padding-right: 23px;
-              font-style: italic;
-              font-size: 13px;
-            "
-          >
-            Refresh Date: 27 May, 2021
-          </div>
+  
 
           <div class="row">
             <div class="col-xs-12 col-md-4 margin-bottom">
@@ -523,7 +523,7 @@
                   </div>
                 </div>
                 <div class="row" style="padding: 0px; margin: 0px">
-                  <div class="col-xs-12 col-sm-10" style="height: 95px">
+                  <div class="col-xs-12 col-sm-9" style="height: 95px">
                     <div
                       class="with-title qvobject"
                       id="QV-1-5c1"
@@ -531,14 +531,14 @@
                     ></div>
                   </div>
                   <div
-                    class="col-xs-12 col-sm-2"
+                    class="col-xs-12 col-sm-3"
                     style="
                       display: flex;
                       justify-content: felx-start;
                       height: 100%;
                       margin: 0px;
                       padding: 0px;
-                      margin-top: 33px;
+                      margin-top: 60px;
                     "
                   >
                     <div class="legend">
@@ -555,7 +555,7 @@
                               </div>
                             </td>
                           </tr>
-                          <tr>
+                         <!--- <tr>
                             <td>
                               <div class="LegendCol">
                                 <div
@@ -576,7 +576,7 @@
                                 Umrah
                               </div>
                             </td>
-                          </tr>
+                          </tr>-->
                         </tbody>
                       </table>
                     </div>
@@ -683,7 +683,7 @@
                   </div>
                 </div>
                 <div class="row" style="padding: 0px; margin: 0px">
-                  <div class="col-xs-12 col-sm-10" style="height: 95px">
+                  <div class="col-xs-12 col-sm-9" style="height: 95px">
                     <div
                       class="with-title qvobject"
                       id="QV-1-6c1"
@@ -691,12 +691,12 @@
                     ></div>
                   </div>
                   <div
-                    class="col-xs-2"
+                    class="col-xs-3"
                     style="
                       height: 100%;
                       margin: 0px;
                       padding: 0px;
-                      margin-top: 33px;
+                      margin-top: 60px;
                     "
                   >
                     <div class="legend">
@@ -713,7 +713,7 @@
                               </div>
                             </td>
                           </tr>
-                          <tr>
+                         <!--<tr>
                             <td>
                               <div class="LegendCol">
                                 <div
@@ -734,7 +734,7 @@
                                 Umrah
                               </div>
                             </td>
-                          </tr>
+                          </tr>-->
                         </tbody>
                       </table>
                     </div>
@@ -836,7 +836,7 @@
                   </div>
                 </div>
                 <div class="row" style="padding: 0px; margin: 0px">
-                  <div style="height: 120px" class="col-xs-12">
+                  <div style="height: 95px" class="col-xs-12">
                     <div
                       class="with-title qvobject"
                       id="QV-1-7c1"
@@ -1033,19 +1033,17 @@
               </div>
             </div>
           </div>
-          <div
-            class=""
-            style="
-              float: right;
-              text-align: end;
-              color: white;
-              margin-top: -30px;
-              padding-right: 23px;
-              font-style: italic;
-              font-size: 13px;
-            "
-          >
-            Refresh Date: 27 May, 2021
+          <div class="col-xs-12 col-md-2 col-lg-1 filter-container" style="position: absolute; right: 0;">
+            <div class="row">
+              <div class="col-xs-12 filter">
+                <div id="QV-clear-2" class="qvobject" style="height: 35px"></div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-xs-12 filter">
+                <div id="QV-refresh-2" class="qvobject" style="height: 35px;width: 110%;"></div>
+              </div>
+            </div>
           </div>
 
           <div class="row" id="kpiInspire">
@@ -1696,21 +1694,20 @@
                 </div>
               </div>
             </div>
+            <div class="col-xs-12 col-md-2 col-lg-1 filter-container" style="position: absolute; right: 0;">
+              <div class="row">
+                <div class="col-xs-12 filter">
+                  <div id="QV-clear-3" class="qvobject" style="height: 35px"></div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-xs-12 filter">
+                  <div id="QV-refresh-3" class="qvobject" style="height: 35px;width: 110%;"></div>
+                </div>
+              </div>
+            </div>
           </div>
-          <div
-            class=""
-            style="
-              float: right;
-              text-align: end;
-              color: white;
-              margin-top: -30px;
-              padding-right: 23px;
-              font-style: italic;
-              font-size: 13px;
-            "
-          >
-            Refresh Date: 27 May, 2021
-          </div>
+ 
 
           <div class="row" id="kpiBook">
             <div class="col-xs-12 col-md-4 margin-bottom">
@@ -2201,21 +2198,20 @@
                 </div>
               </div>
             </div>
+            <div class="col-xs-12 col-md-2 col-lg-1 filter-container" style="position: absolute; right: 0;">
+              <div class="row">
+                <div class="col-xs-12 filter">
+                  <div id="QV-clear-4" class="qvobject" style="height: 35px"></div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-xs-12 filter">
+                  <div id="QV-refresh-4" class="qvobject" style="height: 35px;width: 110%;"></div>
+                </div>
+              </div>
+            </div>
           </div>
-          <div
-            class=""
-            style="
-              float: right;
-              text-align: end;
-              color: white;
-              margin-top: -30px;
-              padding-right: 23px;
-              font-style: italic;
-              font-size: 13px;
-            "
-          >
-            Refresh Date: 27 May, 2021
-          </div>
+
 
           <div class="row" id="kpiExperience">
             <div class="col-xs-12 col-md-4 margin-bottom">
@@ -2670,21 +2666,20 @@
                 </div>
               </div>
             </div>
+            <div class="col-xs-12 col-md-2 col-lg-1 filter-container" style="position: absolute; right: 0;">
+              <div class="row">
+                <div class="col-xs-12 filter">
+                  <div id="QV-clear-5" class="qvobject" style="height: 35px"></div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-xs-12 filter">
+                  <div id="QV-refresh-5" class="qvobject" style="height: 35px;width: 110%;"></div>
+                </div>
+              </div>
+            </div>
           </div>
-          <div
-            class=""
-            style="
-              float: right;
-              text-align: end;
-              color: white;
-              margin-top: -30px;
-              padding-right: 23px;
-              font-style: italic;
-              font-size: 13px;
-            "
-          >
-            Refresh Date: 27 May, 2021
-          </div>
+  
 
           <!--KPIs-->
           <div class="row" id="kpiShare">
