--- a/compass.html
+++ b/compass.html
@@ -286,11 +286,10 @@
 
   <body class="fullbleed vertical layout">
     <nav class="navbar navbar-inverse bg-dark" style="border: 0">
-      <a href="#" class="navbar-brand l1"></a>
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header" style="display: inline-block; width: 12%">
         <a class="navbar-brand" href="#" style="padding: 0">
-          <img alt="Brand" src="1a.PNG" style="height: 100%; width: 100%" />
+          <img alt="Brand" src="1a.svg" style="height: 100%; width: 100%" />
         </a>
       </div>
       <div
@@ -413,7 +412,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-xs-12 col-md-2 col-lg-1 filter-container" style="position: absolute; right: 0;">
+            <div class="col-xs-12 col-md-2 col-lg-1 filter-container" style="">
               <div class="row">
                 <div class="col-xs-12 filter">
                   <div id="QV-clear-1" class="qvobject" style="height: 35px"></div>
@@ -2667,7 +2666,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-xs-12 col-md-2 col-lg-1 filter-container" style="position: absolute; right: 0;">
+            <div class="col-xs-12 col-md-2 col-lg-1 filter-container" style="">
               <div class="row">
                 <div class="col-xs-12 filter">
                   <div id="QV-clear-5" class="qvobject" style="height: 35px"></div>
