--- a/IndustryCompass.html
+++ b/IndustryCompass.html
@@ -1120,7 +1120,7 @@
                         <div class="col-xs-12 title">Brand Equity Drivers</div>
                       </div>
                       <div class="row" style="height: 228px">
-                        <div class="col-xs-12">
+                        <div class="col-xs-12" style="padding:0 25px;">
                           <div
                             class="qvobject"
                             id="QV-2-9c"
@@ -1223,7 +1223,7 @@
                         </div>
                       </div>
 
-                      <div class="row" style="padding: 0 12px">
+                      <div class="row margin-bottom" style="padding: 0 12px">
                         <div class="col-xs-12 title">Barriers to Consider</div>
                       </div>
                       <div class="row">
@@ -1231,7 +1231,7 @@
                           <div
                             class="qvobject"
                             id="QV-2-9c2"
-                            style="height: 127px"
+                            style="height: 135px"
                           ></div>
                         </div>
                       </div>
