--- a/IndustryCompass.html
+++ b/IndustryCompass.html
@@ -668,7 +668,7 @@
             <div class="col-xs-12">
               <div class="item bg-dark">
                 <div class="title" style="height: 35px">Visitor Funnel</div>
-                <div class="row">
+                <div class="row margin-bottom">
                   <div style="
                       text-align: right;
                       padding-right: 90px;
@@ -683,23 +683,23 @@
                     </div>
                   </div>
                 </div>
-                <div id="sourceMarket-1">
+                <div id="sourceMarket-1" style="padding-bottom: 15px;">
                   <div class="row">
-                    <div id="vf1" class="col-xs-12 col-sm-4" style="height: 240px">
+                    <div id="vf1" class="col-xs-12 col-sm-4" style="height: 162px">
                       <div class="with-title qvobject" id="QV-1-8a"></div>
                     </div>
-                    <div id="vf2" class="col-xs-12 col-sm-8" style="z-index: 0; height: 240px">
+                    <div id="vf2" class="col-xs-12 col-sm-8" style="z-index: 0; height: 162px">
                       <div class="with-title qvobject" id="QV-1-8b"></div>
                     </div>
                   </div>
                 </div>
 
-                <div id="destination-1" style="display: none">
+                <div id="destination-1" style="padding-bottom:15px; display: none">
                   <div class="row">
-                    <div id="vf3" class="col-xs-12 col-sm-4" style="height: 240px">
+                    <div id="vf3" class="col-xs-12 col-sm-4" style="height: 162px">
                       <div class="with-title qvobject" id="QV-1-8d"></div>
                     </div>
-                    <div id="vf4" class="col-xs-12 col-sm-8" style="height: 240px">
+                    <div id="vf4" class="col-xs-12 col-sm-8" style="height: 162px">
                       <div class="with-title qvobject" id="QV-1-8e"></div>
                     </div>
                   </div>
