--- a/IndustryCompass.html
+++ b/IndustryCompass.html
@@ -686,10 +686,10 @@
                 <div id="sourceMarket-1" style="padding-bottom: 15px;">
                   <div class="row">
                     <div id="vf1" class="col-xs-12 col-sm-4" style="height: 162px">
-                      <div class="with-title qvobject" id="QV-1-8a"></div>
+                      <div class="with-title qvobject" id="QV-1-8a" style="pointer-events: none;"></div>
                     </div>
                     <div id="vf2" class="col-xs-12 col-sm-8" style="z-index: 0; height: 162px">
-                      <div class="with-title qvobject" id="QV-1-8b"></div>
+                      <div class="with-title qvobject" id="QV-1-8b" style="pointer-events: none;"></div>
                     </div>
                   </div>
                 </div>
@@ -697,10 +697,10 @@
                 <div id="destination-1" style="padding-bottom:15px; display: none">
                   <div class="row">
                     <div id="vf3" class="col-xs-12 col-sm-4" style="height: 162px">
-                      <div class="with-title qvobject" id="QV-1-8d"></div>
+                      <div class="with-title qvobject" id="QV-1-8d" style="pointer-events: none;"></div>
                     </div>
                     <div id="vf4" class="col-xs-12 col-sm-8" style="height: 162px">
-                      <div class="with-title qvobject" id="QV-1-8e"></div>
+                      <div class="with-title qvobject" id="QV-1-8e" style="pointer-events: none;"></div>
                     </div>
                   </div>
                 </div>
