--- a/IndustryCompass.html
+++ b/IndustryCompass.html
@@ -686,10 +686,10 @@
                 <div id="sourceMarket-1" style="padding-bottom: 15px;">
                   <div class="row">
                     <div id="vf1" class="col-xs-12 col-sm-4" style="height: 162px">
-                      <div class="with-title qvobject" id="QV-1-8a" style="pointer-events: none;"></div>
+                      <div class="with-title qvobject" id="QV-1-8a" ></div>
                     </div>
                     <div id="vf2" class="col-xs-12 col-sm-8" style="z-index: 0; height: 162px">
-                      <div class="with-title qvobject" id="QV-1-8b" style="pointer-events: none;"></div>
+                      <div class="with-title qvobject" id="QV-1-8b"></div>
                     </div>
                   </div>
                 </div>
@@ -697,10 +697,10 @@
                 <div id="destination-1" style="padding-bottom:15px; display: none">
                   <div class="row">
                     <div id="vf3" class="col-xs-12 col-sm-4" style="height: 162px">
-                      <div class="with-title qvobject" id="QV-1-8d" style="pointer-events: none;"></div>
+                      <div class="with-title qvobject" id="QV-1-8d"></div>
                     </div>
                     <div id="vf4" class="col-xs-12 col-sm-8" style="height: 162px">
-                      <div class="with-title qvobject" id="QV-1-8e" style="pointer-events: none;"></div>
+                      <div class="with-title qvobject" id="QV-1-8e"></div>
                     </div>
                   </div>
                 </div>
@@ -1005,7 +1005,7 @@
               <div class="item bg-dark margin-bottom">
                 <div class="title">Understanding Visitor Inspiration</div>
                 <div class="row">
-                  <div class="col-xs-12 col-md-6">
+                  <div id="inspireDiv1" class="col-xs-12 col-md-6">
                     <div style="height: 430px">
                       <div class="qvobject" id="QV-2-8" style="height: calc(100% - 20px)"></div>
                       <div style="
@@ -1115,7 +1115,7 @@
                       <span style="color: white; display: table">Barriers to Consider</span>
                       <div class="qvobject" style="height: 45%" id="QV-2-9c2"></div>
                     </div>-->
-                    <div id="divConsideration" style="position: relative; top: -45px">
+                    <div id="divConsideration" style="position: relative; top: -20px">
                       <div class="row" style="padding: 0 12px">
                         <div class="col-xs-12 title">Brand Equity Drivers</div>
                       </div>
