brand equity drivers fix

--- a/IndustryCompass.html
+++ b/IndustryCompass.html
@@ -1057,74 +1057,16 @@
                           background-position-x: center;
                         "></div>
                     </div>
-                    <!--<div id="divConsideration1" style="height: 392px; margin-top: -20px; padding: 0 12px">
-                      <span style="color: white">Brand Equity Drivers</span>
-                      <div class="qvobject" style="
-                          height: 56%;
-                          margin-top: -35px;
-                          margin-left: -67px;
-                          width: calc(100% + 67px) !important;
-                        " id="QV-2-9c"></div>
-                      <div class="row" style="
-                          position: relative;
-                          bottom: 5px;
-                          padding: 0px 5px 0px 125px;
-                        ">
-                        <div class="my-legend" style="padding-top: 4px">
-                          <div class="legend-scale">
-                            <ul class="legend-labels">
-                              <div class="row" style="
-                                  display: flex;
-                                  justify-content: space-between;
-                                ">
-                                <div class="col-xs-2" style="display: flex; justify-content: center">
-                                  <li>
-                                    <span style="background: #db9791; color: black">S</span>
-                                    <span class="LegendTitle" style="width: 62px !important">KSA&lt;50</span>
-                                  </li>
-                                </div>
-                                <div class="col-xs-2" style="display: flex; justify-content: center">
-                                  <li>
-                                    <span style="background: #db9791"></span>
-                                    <span class="LegendTitle" style="width: 62px !important">50-80</span>
-                                  </li>
-                                </div>
-                                <div class="col-xs-2" style="display: flex; justify-content: center">
-                                  <li>
-                                    <span style="background: #d6d6d5"></span>
-                                    <span class="LegendTitle" style="width: 62px !important">80-120</span>
-                                  </li>
-                                </div>
-                                <div class="col-xs-2" style="display: flex; justify-content: center">
-                                  <li>
-                                    <span style="background: #8bd3aa"></span>
-                                    <span class="LegendTitle" style="width: 62px !important">120-150</span>
-                                  </li>
-                                </div>
-                                <div class="col-xs-2" style="display: flex; justify-content: center">
-                                  <li>
-                                    <span style="background: #8bd3aa; color: black">S</span>
-                                    <span class="LegendTitle" style="width: 62px !important">KSA&gt;150</span>
-                                  </li>
-                                </div>
-                              </div>
-                            </ul>
-                          </div>
-                        </div>
-                      </div>
-                      <span style="color: white; display: table">Barriers to Consider</span>
-                      <div class="qvobject" style="height: 45%" id="QV-2-9c2"></div>
-                    </div>-->
                     <div id="divConsideration" style="position: relative; top: -20px">
                       <div class="row" style="padding: 0 12px">
                         <div class="col-xs-12 title">Brand Equity Drivers</div>
                       </div>
-                      <div class="row" style="height: 228px">
+                      <div class="row">
                         <div class="col-xs-12" style="padding:0 25px;">
                           <div
                             class="qvobject"
                             id="QV-2-9c"
-                            style="height: 231px"
+                            style="height: 231px;"
                           ></div>
                         </div>
                       </div>
